<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import alias="adapter" type="br.com.tasafe.utils.LoginBindingAdaptersKt"/>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="br.com.tasafe.viewmodel.LoginRegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="br.com.tasafe.ui.activity.LoginActivity"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorBackground">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo_na_tela_de_login" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogo" />

            <TextView
                android:id="@+id/lblGerenciador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_dp"
                android:text="@string/gerenciador_seguro_de_senhas"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appName" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newUserFrame"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:hideIfSaved="@{viewmodel.userSaved}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblGerenciador">

                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:id="@+id/nomeInptLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/nome"
                    android:labelFor="@+id/txtNome"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/txtNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:padding="@dimen/min_dp"
                        app:requiredEditText="@{`Nome obrigatório.`}"
                        android:text="@={viewmodel.user.nome}"
                        android:autofillHints=""
                        android:inputType="text">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:id="@+id/txtInptLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/email"
                    android:labelFor="@+id/txtEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nomeInptLayout">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.user.email}"
                        app:emailValid="@{`Email inválido.`}"
                        app:required="@{true}"
                        app:requiredMessage="@{`Email obrigatório.`}"
                        android:padding="@dimen/min_dp"
                        android:autofillHints="">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:id="@+id/txtInptLayoutPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:labelFor="@+id/txtPass"
                    android:hint="@string/senha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtInptLayoutEmail">

                    <EditText
                        android:id="@+id/txtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/min_dp"
                        android:text="@={viewmodel.password}"
                        android:textColor="@color/colorWhite"
                        app:invalidPass="@{`A senha deve conter no mínimo 8 caracteres, 1 letra, 1 número e 1 caractere especial.`}"
                        app:viewmodel="@{viewmodel}">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/registrar"
                    android:layout_marginTop="@dimen/login_title"
                    android:onClick="register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInptLayoutPass" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginFrame"
                app:showIfSaved="@{viewmodel.userSaved}"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblGerenciador">

                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:id="@+id/senhaInptLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/senha"
                    android:labelFor="@+id/txtLoginSenha"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/txtLoginSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:padding="@dimen/min_dp"
                        android:text="@={viewmodel.password}"
                        android:autofillHints=""
                        android:inputType="textPassword">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/autenticar"
                    android:onClick="login"
                    android:layout_marginTop="@dimen/normal_dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/senhaInptLayout" />


                <TextView
                    android:id="@+id/lblAuth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_title"
                    android:textColor="@color/colorWhite"
                    android:text="@string/clique_para_autenticaar_com_digital"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"></TextView>


                <ImageButton
                    android:src="@drawable/icon_digital"
                    android:textAlignment="center"
                    android:id="@+id/btnEntrarDigital"
                    android:padding="@dimen/normal_dp"
                    android:layout_marginTop="@dimen/normal_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/autenticar"
                    android:onClick="showBiometricPrompt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblAuth" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <include layout="@layout/loading" />
    </FrameLayout>

</layout>