<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodelN"
            type="br.com.tasafe.viewmodel.NewSiteViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/normal_dp"
        android:background="@color/colorBackground"
        tools:context="br.com.tasafe.ui.activity.NewSiteActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:id="@+id/nomeInptLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/nome"
            android:labelFor="@+id/txtNomeSite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/txtNomeSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/min_dp"
                android:inputType="textCapWords|textCapSentences"
                android:text="@={viewmodelN.site.nomeSite}"
                android:autofillHints="">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:id="@+id/txtInptLayoutUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="URL"
            android:labelFor="@+id/txtSite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomeInptLayout">

            <EditText
                android:id="@+id/txtSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:text="@={viewmodelN.site.urlSite}"
                android:padding="@dimen/min_dp"
                android:autofillHints="">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:id="@+id/txtInptLayoutiUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="Usuario"
            android:labelFor="@+id/txtUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInptLayoutUrl">

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="text"
                android:text="@={viewmodelN.site.usuario}"
                android:padding="@dimen/min_dp"
                android:autofillHints="">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:id="@+id/txtInptLayoutPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:labelFor="@+id/txtPassSite"
            android:hint="@string/senha"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInptLayoutiUsuario">

            <EditText
                android:id="@+id/txtPassSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@={viewmodelN.password}"
                android:inputType="textPassword"
                android:padding="@dimen/min_dp"
                android:imeOptions="actionDone"
                android:autofillHints="">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:text="@string/registrar"
            android:layout_marginTop="@dimen/login_title"
            android:onClick="register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/normal_dp"/>
        <include layout="@layout/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
